# discord-gdpr-attachment-backup

./: .pre-commit-config.yaml  README.md  main.py  mise.toml  pyproject.toml  requirements.txt
src/: __init__.py  cli.py
src/commands/: date_cutoff.py  download_attachments.py
src/utils/: discord_export.py  downloads.py  gdpr_messages.py
